# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  19 Sep 2013; Fabian Groffen <grobian@gentoo.org> portage-2.2.01.22288.ebuild,
  portage-2.2.4.22351.ebuild, portage-2.2.6.22374.ebuild:
  Drop legacy sed replacements (vars were moved)

*portage-2.2.6.22374 (18 Sep 2013)

  18 Sep 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.6.22374.ebuild,
  -portage-2.2.01.22124-r1.ebuild:
  Version bump

*portage-2.2.4.22351 (13 Sep 2013)

  13 Sep 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.4.22351.ebuild,
  -portage-2.2.01.22097.ebuild, -portage-2.2.01.22124.ebuild:
  Version bump

  13 Aug 2013; Benda Xu <heroxbd@gentoo.org> +portage-2.2.01.22288.ebuild:
  portage lib is usr/lib regardless of multilib. fix variable
  portage_base introduced in portage-2.2.00.7209.ebuild rev 7277.

*portage-2.2.01.22288 (12 Aug 2013)

  12 Aug 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22288.ebuild,
  -portage-2.2.01.22013.ebuild:
  Version bump, matches v2.2.0_alpha196+

*portage-2.2.01.22124-r1 (13 Jul 2013)

  13 Jul 2013; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.22124-r1.ebuild:
  Bring ebuild in line with gentoo-x86 version

*portage-2.2.01.22124 (10 Jul 2013)

  10 Jul 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22124.ebuild,
  -portage-2.2.01.22120.ebuild:
  Version bump, matches 2.2.0_alpha188

*portage-2.2.01.22120 (08 Jul 2013)

  08 Jul 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22120.ebuild,
  -portage-2.2.01.22007.ebuild:
  Version bump, matches 2.2.0_alpha187

*portage-2.2.01.22097 (29 Jun 2013)

  29 Jun 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22097.ebuild,
  -portage-2.2.01.21938.ebuild:
  Version bump, matches v2.2.0_alpha186

*portage-2.2.01.22013 (12 Jun 2013)

  12 Jun 2013; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.22013.ebuild,
  -portage-2.2.01.21890.ebuild:
  bump for fix for bug #472984
